# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  justfile  spec.yaml
.sqlx/: query-11360ab2dcb11ad11776c3b84bdf00fb356f2bff887b88e9b02085be86fb40f1.json  query-2cdf73c97a8f102d2227989e8099d5f36649b15e0c6340bfcf08bfcfe55f7062.json
configuration/: local.yaml  production.yaml
migrations/: 20240814063213_create_subscriptions_table.down.sql  20240814063213_create_subscriptions_table.up.sql  20240818120958_add_status_to_subscriptions.down.sql  20240818120958_add_status_to_subscriptions.up.sql  20240818121912_make_status_not_null_in_subscriptions.down.sql  20240818121912_make_status_not_null_in_subscriptions.up.sql  20240818122938_create_subscription_tokens_table.down.sql  20240818122938_create_subscription_tokens_table.up.sql  20240828113109_create_users_table.up.sql  20240828120012_rename_password_column.down.sql  20240828120012_rename_password_column.up.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  subscriptions.rs  utils.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
