[package]
name = "zero2prod"
version = "0.1.0"
authors = ["June Park <jnepark202012@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.9.0" }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }

serde = { version = "1.0.207", features = ["derive"] }
serde-aux = "4.5.0"
derive_more = { version = "1.0.0", features = ["display"] }
unicode-segmentation = "1.11.0"
unicode_categories = "0.1.1"
validator = { version = "0.18.1", features = ["derive"] }
fake = "2.9.2"
rand = "0.8.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

config = "0.14.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.11"
secrecy = { version = "0.8.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dependencies.reqwest]
version = "0.12.5"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7.1"
wiremock = "0.6.1"
serde_json = "1.0.125"
linkify = "0.10.0"